# fastvecdb

./: README.md  pyproject.toml  testpg.py  testpg2.py
pg/: Dockerfile  README.md  run.sh
src/fastvecdb/: config.py  db.py  dependencies.py  embedding.py  main.py  models.py  routes.py  schemas.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_embeddings.py
