[project]
name = "fastvecdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.1",
    "pgvector>=0.4.2",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "starlette>=0.50.0",
]

[dependency-groups]
dev = [
    "aiohttp>=3.13.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
